@@ -1,6 +1,7 @@
 package io.quarkus.deployment;
 
 import io.quarkus.deployment.annotations.BuildStep;
+import io.quarkus.deployment.builditem.ModuleOpenBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.RuntimeInitializedClassBuildItem;
 
 public class JBossThreadsProcessor {
@@ -11,4 +12,11 @@ public class JBossThreadsProcessor {
         // see https://github.com/jbossas/jboss-threads/pull/200
         return new RuntimeInitializedClassBuildItem("org.jboss.threads.EnhancedQueueExecutor$RuntimeFields");
     }
+
+    @BuildStep
+    ModuleOpenBuildItem allowClearThreadLocals() {
+        // Since JDK 24, JBoss Threads needs `--add-opens java.base/java.lang=org.jboss.threads` to handle org.jboss.JDKSpecific.ThreadAccess.clearThreadLocals()
+        return new ModuleOpenBuildItem("java.base", ModuleOpenBuildItem.ALL_UNNAMED, "java.lang");
+    }
+
 }
